# cdeno

./: .gitignore  Cargo.toml  LICENSE  README.md  mod.js
example/: build_test_lib.sh  cdeno.h  cdeno.hpp  debug_example.sh  test.cpp  test.js
src/: ffi.rs  lib.rs  types.rs
tools/: build_test_lib.sh  doc.sh  run_example.sh
