[package]
name = "cdeno"
version = "0.1.0"
authors = ["TTtie <me@tttie.cz>"]
edition = "2018"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
deno_core = "0.61.0"
dlopen = "0.1.8"

[profile.release]
lto = true
opt-level = 3